--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,11 @@
     "paths": {
       "@/*": [
         "src/*"
-      ]
+      ],
+      "components/*": ["src/components/*"],
+      "icons/*": ["src/assets/svg/*"],
+      "interfaces/*": ["src/interfaces/*"],
+      "mocks/*": ["src/mocks/*"]
     },
     "lib": [
       "esnext",
