--- a/package.json
+++ b/package.json
@@ -7,17 +7,25 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "animejs": "^3.2.1",
     "core-js": "^3.8.3",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "vue": "^3.2.13",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.6",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "~4.5.5"
   }
 }
